Fix wallpaper cutting off

--- a/css/main.scss
+++ b/css/main.scss
@@ -239,7 +239,8 @@ body {
   height: 100%;
 }
 .page-container{
-  height: 100%;
+  min-height: 100%;
+  height: fit-content;
 }
 
 .content {
